--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(fwork_312320062 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(fwork_312320062 q1_312320062.c check_pid.c check.c)
+add_executable(fwork_312320062 q1_312320062.c check_pid.c client.c server.c set_policy.c)
